jib 및 pinpoint agent 적용